--- a/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione+GST_GC_A101_ DR Biomass.Rmd
+++ b/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione+GST_GC_A101_ DR Biomass.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "Waterhemp MIs GC 2,4-D Biomass"
+title: "Waterhemp MIs GC Mesotrione Biomass"
 author: "Felipe Faleco"
-date: "09/11/2023"
+date: "03/05/2024"
 output:
   html_document:
     df_print: paged
@@ -26,12 +26,12 @@ library(dplyr)
 
 ```{r}
 
-data <- read.csv("Data Sheet_2,4-D_GC.csv")
+data <- read.csv("Data Sheet_Meso_GC.csv")
 
 str(data)
 
 
-data.A101.24D.GST <- data %>% filter(pop == "A101", herb == "2,4D+GST")
+data.A101.meso.GST <- data %>% filter(pop == "A101", herb == "meso+GST")
 
 
 
@@ -39,7 +39,7 @@ fun <- function(x){
   c( mean = mean(x), VAR = var(x), SD = sd(x), SE = std.error(x), n = length(x))
 }
 
-summary.A101.24D.GST <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data.A101.24D.GST),
+summary.A101.meso.GST <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, data = subset(data.A101.meso.GST),
           FUN=fun)
 
 
@@ -51,7 +51,7 @@ summary.A101.24D.GST <- summaryBy(cbind(biomass) ~ pop + rate + temp + herb, dat
 
 ```{r}
 
-model.LL4 <- drm(biomass ~ rate, temp, fct = LL.4(), data = data.A101.24D.GST, type = "continuous")
+model.LL4 <- drm(biomass ~ rate, temp, fct = LL.4(), data = data.A101.meso.GST, type = "continuous")
 
 
 plot(fitted(model.LL4), residuals(model.LL4))
@@ -86,7 +86,7 @@ mselect(model.LL4,  list(L.3(), L.4(), L.5(), LL.2(), LL.3(), LL.3u(), LL.4(), L
 # Lower IC, which actually is AIC (default), indicates the best model to be used. On the other hand, the highest the Lack of Fit, better the model. The two-, three-, and four-parameter log-logistic models are are symmetrical around the inflection point (parameter "e") while others (e.g. fiveparameter log-logistic, Gompertz, and Weibull) are asymmetrical. In symmetrical models, the parameter "e" and relative ED50 are identical, that is, they both indicate the dose that reduces the response midway between the upper and lower limits. In asymmetrical models, however, the parameter "e" does not have the same meaning as in symmetrical models, even though it is still the location of the inflection point. Therefore, in asymmetrical models, ED50 should be estimated as "absolute" and not relative.
 
 
-model.W2.3 <- drm(biomass ~ rate, temp, fct = W2.3(), data = data.A101.24D.GST, type = "continuous")
+model.W2.3 <- drm(biomass ~ rate, temp, fct = W2.3(), data = data.A101.meso.GST, type = "continuous")
 
 
 
@@ -153,7 +153,7 @@ compParm(model.W2.3, strVal = "e", operator = "-") # Remember that for asymmetri
 
 ```{r}
 
-tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/2,4-D/2023/2,4-D_Absolute ED/MIs_2,4-D+GST_GC_A101_ DR Biomass.tiff",
+tiff(file="C:/Users/felip/OneDrive - UW-Madison/Documents/GitHub/FFaleco/PhD/PhD Projects/Waterhemp/Metabolism Inhibitors/GC/Mesotrione/2023/Mesotrione_Absolute ED/MIs_Mesotrione+GST_GC_A101_ DR Biomass.tiff",
      width = 10, height = 8, units = "in", res = 600, compression = "lzw")
 
 
@@ -162,7 +162,7 @@ par(mar = c(5,5,1,1))
 
 plot(model.W2.3,
      type = "average",
-     xlab = expression(paste("2,4-D + GST rate (g ae ha"^-1, ")")),
+     xlab = expression(paste("Mesotrione + GST rate (g ai ha"^-1, ")")),
      ylab = expression(paste("A101 biomass (g plant"^-1, ")")),
      ylim = c(0, 4),
      col = c("red", "darkgreen"),
@@ -171,7 +171,7 @@ plot(model.W2.3,
      cex.axis = 1.3,
      cex.lab = 1.9,
      cex.legend = 2.0,
-     legendPos = c(4000, 4.0),
+     legendPos = c(500, 4.0),
      lwd = 1.5)
 
 
