--- a/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/LOGIT_BIORED.Rmd
+++ b/MS Projects/Giant Ragweed Resistance/Analysis for Manuscript/Data Analysis - POST/LOGIT_BIORED.Rmd
@@ -66,9 +66,13 @@ summary(model)
 
 ```{r, echo=TRUE}
 
-glmmTMB:::Anova.glmmTMB(model, type = 3)
+glmmTMB:::Anova.glmmTMB(model, type = 2, test.statistic = "Chisq")
 
-# when data is balanced, the factors are orthogonal, and types I, II and III all give the same results. Usually the hypothesis of interest is about the significance of one factor while controlling for the level of the other factors. This equates to using type II or III SS. In general, if there is no significant interaction effect, then type II is more powerful, and follows the principle of marginality. If interaction is present, then type II is inappropriate while type III can still be used, but results need to be interpreted with caution (in the presence of interactions, main effects are rarely interpretable).
+
+#The designations "type-II" and "type-III" are borrowed from SAS, but the definitions used here do not correspond precisely to those employed by SAS. Type-II tests are calculated according to the principle of marginality, testing each term after all others, except ignoring the term's higher-order relatives; so-called type-III tests violate marginality, testing each term in the model after all of the others. This definition of Type-II tests corresponds to the tests produced by SAS for analysis-of-variance models, where all of the predictors are factors, but not more generally (i.e., when there are quantitative predictors). Be very careful in formulating the model for type-III tests, or the hypotheses tested will not make sense.
+
+#Be careful of type-III tests: For a traditional multifactor ANOVA model with interactions, for example, these tests will normally only be sensible when using contrasts that, for different terms, are orthogonal in the row-basis of the model, such as those produced by contr.sum, contr.poly, or contr.helmert, but not by the default contr.treatment. In a model that contains factors, numeric covariates, and interactions, main-effect tests for factors will be for differences over the origin. In contrast (pun intended), type-II tests are invariant with respect to (full-rank) contrast coding. If you don't understand this issue, then you probably shouldn't use Anova for type-III tests.
+
 
 ```
 
